formatação do formulário

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         </div>
                     
                         <input type="submit" value="Entrar">
-                        <a href="esqueci.html">esqueci a senha <i class="material-symbols-outlined">mail</i></a>
+                        <a class="botão" href="esqueci.html">esqueci a senha <i class="material-symbols-outlined">mail</i></a>
 
                     
                 </form>
